--- a/MyOnlineShop/MyOnlineShop.DA.Inmemory/MyOnlineShop.DA.Inmemory.csproj
+++ b/MyOnlineShop/MyOnlineShop.DA.Inmemory/MyOnlineShop.DA.Inmemory.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProductRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyOnlineShop.Core\MyOnlineShop.Core.csproj">
+      <Project>{60ed6c93-06ac-45b7-b68b-8a714b4c66f4}</Project>
+      <Name>MyOnlineShop.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
