--- a/MyOnlineShop/MyOnlineShop.WebUI/MyOnlineShop.WebUI.csproj
+++ b/MyOnlineShop/MyOnlineShop.WebUI/MyOnlineShop.WebUI.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProductManagerController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -339,6 +340,10 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\ProductManager\Index.cshtml" />
+    <Content Include="Views\ProductManager\Create.cshtml" />
+    <Content Include="Views\ProductManager\Edit.cshtml" />
+    <Content Include="Views\ProductManager\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -353,6 +358,24 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyOnlineShop.Core\MyOnlineShop.Core.csproj">
+      <Project>{60ed6c93-06ac-45b7-b68b-8a714b4c66f4}</Project>
+      <Name>MyOnlineShop.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyOnlineShop.DA.Inmemory\MyOnlineShop.DA.Inmemory.csproj">
+      <Project>{80008951-82e3-4919-a378-7a1f6de8682c}</Project>
+      <Name>MyOnlineShop.DA.Inmemory</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyOnlineShop.DA.SQL\MyOnlineShop.DA.SQL.csproj">
+      <Project>{744e156b-5920-4b1d-bc4e-9d62fb098900}</Project>
+      <Name>MyOnlineShop.DA.SQL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyOnlineShop.Services\MyOnlineShop.Services.csproj">
+      <Project>{7eff7f84-616d-412d-a488-4f96a1f4cd6e}</Project>
+      <Name>MyOnlineShop.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
